--- a/.github/workflows/release-action-call.yml
+++ b/.github/workflows/release-action-call.yml
@@ -7,11 +7,11 @@ on:
       types: [created]        
 
 jobs:
-  Release-solution-ALMLab:
+  Release-solution-TimeEntryCanvas:
     uses: ./.github/workflows/release-solution-with-inputs.yml
     with:
       #You can specify the solution name here
-      solution_name: ALMLab
+      solution_name: TimeEntryCanvas
       #Update your values here
       BUILD_ENVIRONMENT_URL: https://gittestingdemo.crm.dynamics.com
       PRODUCTION_ENVIRONMENT_URL: https://gittargettest.crm.dynamics.com
